<resources>
    <string name="app_name">Transportivo</string>
    <string name="openNavDrawer">Open navigation drawer</string>
    <string name="closeNavDrawer">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="description"> Description</string>
    <string name="fromDestination">From destination</string>
    <string name="toDestination">To destination</string>
    <string name="arrivalTime">Arrival</string>
    <string name="departureTime">Departure</string>
    <string name="capacity">Capacity</string>
    <string name="price">Price</string>
    <string name="profile_menu_item">Profile</string>
    <string name="add_offer_menu_item">Add offer</string>
    <string name="notifications_menu_item">Notifications</string>
    <string name="reservations_menu_item">Reservations</string>
    <string name="settings_menu_item">Settings</string>
    <string name="home_menu_item">Home</string>
    <string name="name">Name</string>
    <string name="lastName">Last name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout_menu_item">Log Out</string>
    <string name="rating">Rating</string>
    <string name="comment">Leave a comment</string>
    <string name="complete">Complete</string>
</resources>
