<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableTop="@drawable/ic_profile"
                android:backgroundTint="#C7CDCD"
                android:textColor="#0D0D0D"
                android:text="@string/profile_menu_item"
                app:cornerRadius="7dp" />

            <Button
                android:id="@+id/btnNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableTop="@drawable/ic_notifications"
                android:backgroundTint="#C7CDCD"
                android:textColor="#0D0D0D"
                android:text="@string/notifications_menu_item"
                app:cornerRadius="7dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnReservations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableTop="@drawable/ic_reservations"
                android:backgroundTint="#C7CDCD"
                android:textColor="#0D0D0D"
                android:text="@string/reservations_menu_item"
                app:cornerRadius="7dp" />

            <Button
                android:id="@+id/btnAddOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableTop="@drawable/ic_add_offer"
                android:backgroundTint="#C7CDCD"
                android:textColor="#0D0D0D"
                android:text="@string/add_offer_menu_item"
                app:cornerRadius="7dp" />

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>